# Reversedeer-Bot

./: .env  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
src/plugins/nonebot_plugin_baidutranslate/: __init__.py
src/plugins/nonebot_plugin_bottle/: __init__.py  config.py  data_source.py
src/plugins/nonebot_plugin_code/: __init__.py  run.py
src/plugins/nonebot_plugin_crazy_thursday/: __init__.py  config.py  post.json
src/plugins/nonebot_plugin_date_name/: name.db
src/plugins/nonebot_plugin_directlinker/: __init__.py
src/plugins/nonebot_plugin_dog/: __init__.py  check_update.py  handle.py  update.py  utils.py
src/plugins/nonebot_plugin_eventmonitor/: __init__.py  admin.py  config.py  handle.py  honour.py  message.py  txt2img.py  update.py  utils.py
src/plugins/nonebot_plugin_game/: handle.py
src/plugins/nonebot_plugin_hyp/: __init__.py  api.py  handle.py  message.py  utils.py
src/plugins/nonebot_plugin_namelist/: namelist.json
src/plugins/nonebot_plugin_new_bing/: __init__.py  txt_to_img.py  utils.py
src/plugins/nonebot_plugin_ping/: __init__.py
src/plugins/nonebot_plugin_simplemusic/: __init__.py
src/plugins/nonebot_plugin_status/: __init__.py  common.py  config.py  data_source.py  onebot_v11.py
src/plugins/src/plugins/nonebot_plugin_admin/: __init__.py  admin.py  admin_role.py  approve.py  auto_ban.py  auto_ban_.py  broadcast.py  func_hook.py  group_request_verify.py  img_check.py  notice.py  path.py  request_manual.py  requests.py  switcher.py  utils.py  word_analyze.py  wordcloud.py
