[project]
name = "nb2"
version = "2.2.0"
description = "nb2"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_localstore", "nonebot_plugin_alconna"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
